added input bars

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script crossorigin src="https://npmcdn.com/axios/dist/axios.min.js"></script>
   <head>
     <meta charset="utf-8">
     <title>TODO list</title>
@@ -9,5 +10,8 @@
   <body>
     <p>Things to do</p>
     <div id="root"></div>
+    <script src="client/components/Search.js"></script>
+    <script src="client/components/Write.js"></script>
+    <script src="client/app.js"></script>
   </body>
 </html>
